# shahrim

./: .env.example  .gitignore  .npmrc  Makefile  PROGRESS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_login_codes.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/routes/: admin.py  auth.py  categories.py  issues.py
apps/backend/app/bot/: __main__.py  bot.py  messages.py
apps/backend/app/core/: config.py  middleware.py  security.py
apps/backend/app/crud/: admin.py  category.py  issue.py  login_code.py  rating.py  user.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/models/: __init__.py  category.py  enums.py  issue.py  login_code.py  rating.py  resolution.py  status_history.py  user.py
apps/backend/app/schemas/: admin.py  auth.py  category.py  issue.py  user.py
apps/backend/app/services/: issue_status.py  notifications.py  storage.py  telegram_auth.py
apps/backend/app/services/ai/: __init__.py  base.py  gemini_provider.py  mock_provider.py  openai_provider.py  prompts.py
apps/backend/tests/: conftest.py  helpers.py  test_admin.py  test_ai.py  test_auth_api.py  test_bot.py  test_categories.py  test_health.py  test_history.py  test_issues.py  test_native_auth.py  test_notifications.py  test_ratelimit.py  test_rating.py  test_status_service.py  test_telegram_auth.py
docs/: README.md  (+1 more)
(+84 files in other folders)
